<resources>
    <string name="app_name">U1 RFID</string>
    <string name="select">Select</string>
    <string name="picker">Picker</string>
    <string name="auto_read_on_tag_scan">Auto read on tag scan?</string>
    <string name="type">Type</string>
    <string name="typec">Type:</string>
    <string name="color">Color</string>
    <string name="tag_id">Tag ID:</string>
    <string name="read">Read</string>
    <string name="write">Write</string>
    <string name="pick_color">Pick Color</string>
    <string name="tag_found">"TAG Found: "</string>
    <string name="data_written_to_tag">Data written to TAG</string>
    <string name="error_writing_to_tag">Error writing to TAG</string>
    <string name="invalid_tag_type">Invalid tag type</string>
    <string name="error_reading_tag">Error reading TAG</string>
    <string name="data_read_from_tag">Data read from TAG</string>
    <string name="unknown_or_empty_tag">Unknown or empty TAG</string>
    <string name="size">Size</string>
    <string name="info_temps">Extruder Temp: %d min | %d max\nBed Temp: %d min | %d max</string>
    <string name="hex_color_code">HEX Color Code</string>
    <string name="no_nfc_tag_found">No NFC tag found</string>
    <string name="close">Close</string>
    <string name="add_filament">Add Filament</string>
    <string name="alphanumeric">abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789</string>
    <string name="numeric">0123456789</string>
    <string name="save">Save</string>
    <string name="add">Add</string>
    <string name="fill_all_fields">Fill all fields</string>
    <string name="edit_filament">Edit Filament</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="delete_filament">Delete Filament?</string>
    <string name="edit">Edit</string>
    <string name="serialdesc">e.g. Basic, Matte, Silk, Marble</string>
    <string name="help">Help</string>
    <string name="extruder_min">Extruder Min</string>
    <string name="extruder_max">Extruder Max</string>
    <string name="bed_min">Bed Min</string>
    <string name="bed_max">Bed Max</string>
    <string name="can_t_find_vendor_i_want">Can\'t find vendor I want</string>
    <string name="accept">Accept</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="alpha">Alpha</string>
    <string name="submit">Submit</string>
    <string name="invalid_hex_code_please_use_aarrggbb_format">Invalid Hex Code. Please use AARRGGBB format.</string>
    <string name="enter_hex_color_aarrggbb">Enter Hex Color (AARRGGBB)</string>
    <string name="aarrggbb">AARRGGBB</string>
    <string name="rgb_sliders">ARGB Sliders</string>
    <string name="color_picker">Color Picker</string>
    <string name="preset_colors">Preset Colors</string>
    <string name="formatting_tag">Formatting tag…</string>
    <string name="tag_formatted">Tag formatted</string>
    <string name="failed_to_format_tag_for_writing">Failed to format tag for writing</string>
    <string name="import_txt">Import</string>
    <string name="export">Export</string>
    <string name="no_data_to_export">No data to export</string>
    <string name="database_legacy_import_failed">"Database legacy import failed: "</string>
    <string name="database_imported_successfully">Database imported successfully!</string>
    <string name="backup_file_not_found_in_downloads">"Backup file not found in Downloads: "</string>
    <string name="incorrect_database_file_selected">Incorrect database file selected\nThe filament_database.db is required</string>
    <string name="database_saf_import_failed">"Database SAF import failed: "</string>
    <string name="database_legacy_export_failed">"Database legacy export failed: "</string>
    <string name="database_exported_successfully_to_downloads_folder">Database exported successfully to Downloads folder!</string>
    <string name="database_saf_export_failed">"Database SAF export failed: "</string>
    <string name="database_exported_successfully">Database exported successfully!</string>
    <string name="failed_to_create_db_backup_file">Failed to create .db backup file.</string>
    <string name="cannot_write_to_selected_directory">Cannot write to selected directory.</string>
    <string name="select_backup_folder">Select backup folder</string>
    <string name="storage_permission_denied_cannot_perform_action">Storage permission denied. Cannot perform action.</string>
    <string name="import_cancelled">Import cancelled.</string>
    <string name="failed_to_select_import_file">Failed to select import file.</string>
    <string name="export_cancelled">Export cancelled.</string>
    <string name="failed_to_get_export_directory">Failed to get export directory.</string>
    <string name="photo_color">Photo Color</string>
    <string name="photo_capture_cancelled_or_failed">Photo capture cancelled or failed.</string>
    <string name="camera_permission_is_required_to_take_photos">Camera permission is required to take photos.</string>
    <string name="launch_app_on_tag_detect">Launch APP on tag detect?</string>
    <string name="values_reset">Values reset</string>
    <string name="invalid_input">Invalid input</string>
    <string name="field_cannot_be_empty_use_0">Field cannot be empty\nUse 0 for no bed temperature</string>
    <string name="this_temperature_is_too_low">This temperature is too low\nValues below 150 may cause issues</string>
    <string name="field_cannot_be_empty">Field cannot be empty</string>
    <string name="this_value_might_be_invalid">This value might be invalid\n1.75 is a valid diameter</string>
    <string name="the_length_is_too_short">The length is too short\nThe value is length in meters</string>
    <string name="minimum_8_characters_required">Minimum 8 characters required\nThe Format is: AARRGGBB</string>
    <string name="tag_is_password_protected_unable_to_write_to_this_tag">Tag is password protected\nUnable to write to this tag</string>
    <string name="tag_is_password_protected_trying_default_password">Tag is password protected\nTrying default passwords</string>
    <string name="password_failed_unable_to_write_to_this_tag">Password failed\nUnable to write to this tag</string>
    <string name="diameter">Diameter</string>
    <string name="length">Length</string>
    <string name="brand">Brand</string>
    <string name="vendor">Vendor</string>
    <string name="ultralight_c">Ultralight C</string>
    <string name="ultralight_not_currently_supported">Ultralight not currently supported</string>
    <string name="format">Format</string>
    <string name="this_will_erase_the_data_on_the_tag_and_format_it_for_writing">This will erase the data on the tag and format it for writing</string>
    <string name="format_tag">Format Tag</string>
    <string name="app_database">App Database</string>
    <string name="export_app_database">Export App Database</string>
    <string name="import_app_database">Import App Database</string>
    <string name="rfid_functions">RFID Functions</string>
    <string name="auto_read">Auto Read</string>
    <string name="read_tag_memory">Read Tag Memory</string>
    <string name="nfc_functions">NFC Functions</string>
    <string name="launch_app">Launch APP</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="app">App</string>
    <string name="incompatible_tag">Incompatible tag</string>
    <string name="tag_is_already_ndef_formatted">Tag is already NDEF formatted</string>
    <string name="subtype">Subtype</string>
    <string name="tag_is_read_only">Tag is read-only</string>
    <string name="tag_capacity_too_small">Tag capacity too small</string>
    <string name="filament_not_found_in_db">Filament not found in db</string>
    <string name="application_json">application/json</string>
    <string name="extended_firmware_url">https://github.com/paxx12/SnapmakerU1-Extended-Firmware</string>
    <string name="extended_firmware_message">You must install the extended firmware to the U1 for RFID tags written by this app to work.\n\nYou can obtain the extended firmware from</string>
    <string name="i_understand">I Understand</string>
    <string name="extended_firmware_required">Extended Firmware Required</string>
    <string name="tag_memory">Tag Memory</string>
    <string name="import_database">Import Database</string>
    <string name="restore_database_from_file_filament_database_db">Restore database from file\n\nfilament_database.db</string>
    <string name="export_database">Export Database</string>
    <string name="backup_database_to_file_filament_database_db">Backup database to file\n\nfilament_database.db</string>
    <string name="ext_max">Ext Max</string>
    <string name="ext_min">Ext Min</string>
    <string name="spool_is_archived">Whether this spool is archived and should not be used anymore</string>
    <string name="archived">Archived</string>
    <string name="comment">Comment</string>
    <string name="lot_number">Lot Number</string>
    <string name="location">Location</string>
    <string name="price">Price</string>
    <string name="remaining_weight_g">Remaining Weight (g)</string>
    <string name="used_weight">Used Weight</string>
    <string name="initial_weight">Initial Weight</string>
    <string name="last_used">Last Used</string>
    <string name="first_used">First Used</string>
    <string name="external_id">External ID</string>
    <string name="color_direction">Color Direction</string>
    <string name="coaxial">coaxial</string>
    <string name="multi_color_hexes_csv">Multi-Color Hexes (CSV)</string>
    <string name="color_hex">Color Hex</string>
    <string name="bed_c">Bed °C</string>
    <string name="extruder_c">Extruder °C</string>
    <string name="article_number">Article Number</string>
    <string name="spool_weight">Spool Weight</string>
    <string name="weight_g">Weight (g)</string>
    <string name="density">Density</string>
    <string name="material">Material</string>
    <string name="filament_name">Filament Name</string>
    <string name="empty_spool_weight_g">Empty Spool Weight (g)</string>
    <string name="vendor_name">Vendor Name</string>
    <string name="filament">Filament</string>
    <string name="spool">Spool</string>
    <string name="utf_8">UTF-8</string>
    <string name="settings">Settings</string>
    <string name="open_settings">Open Settings</string>
    <string name="spoolman_host_is_not_set">Spoolman host is not set</string>
    <string name="add_spool_to_spoolman">\u00A0\u00A0Add Spool to Spoolman\u00A0\u00A0</string>
    <string name="rfid_tagged_for_snapmaker_u1">RFID tagged for Snapmaker U1</string>
    <string name="spool_created_successfully">Spool created successfully!</string>
    <string name="failed_to_create_spool">Failed to create spool</string>
    <string name="error_creating_spool">Error creating spool</string>
    <string name="selected_tool">Selected Tool</string>
    <string name="select_toolhead">Select Toolhead</string>
    <string name="set">Set</string>
    <string name="none">None</string>
    <string name="ace_dryer">Ace Dryer</string>
    <string name="set_u1_filament">Set U1 Filament</string>
    <string name="printer">Printer</string>
    <string name="ace_dryer_control">Ace Dryer Control</string>
    <string name="duration">Duration</string>
    <string name="temperature">Temperature</string>
    <string name="stop">Stop</string>
    <string name="start">Start</string>
    <string name="write_to_u1">Write to U1</string>
</resources>