<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <item android:title="@string/app">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/twotone_settings_24"
                android:title="@string/open_settings" />
        </menu>
    </item>
    <item android:title="@string/app_database">
        <menu>
            <item
                android:id="@+id/nav_export"
                android:icon="@drawable/twotone_export_24"
                android:title="@string/export_app_database" />
            <item
                android:id="@+id/nav_import"
                android:icon="@drawable/twotone_import_24"
                android:title="@string/import_app_database" />
        </menu>
    </item>
    <item android:title="@string/rfid_functions">
        <menu>
            <item
                android:id="@+id/nav_read"
                android:icon="@drawable/twotone_contactless_24"
                android:title="@string/auto_read"
                app:actionLayout="@layout/switch_item" />
            <item
                android:id="@+id/nav_format"
                android:icon="@drawable/twotone_layers_clear_24"
                android:title="@string/format_tag" />
            <item
                android:id="@+id/nav_memory"
                android:icon="@drawable/twotone_memory_24"
                android:title="@string/read_tag_memory" />
        </menu>
    </item>
    <item android:title="@string/printer">
        <menu>
            <item
                android:id="@+id/nav_write"
                android:icon="@drawable/twotone_tool_24"
                android:title="@string/write_to_u1"
                app:actionLayout="@layout/switch_item" />
            <item
                android:id="@+id/nav_dryer"
                android:icon="@drawable/twotone_api_24"
                android:visible="false"
                android:title="@string/ace_dryer" />
        </menu>
    </item>
</menu>