<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_rounded_bg"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="?attr/colorPrimary"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"
        android:text="@string/ace_dryer_control" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        app:layout_constraintWidth_max="500dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:baselineAligned="false"
                android:layout_marginBottom="20dp">

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.5"
                    android:layout_marginEnd="6dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/border"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:padding="4dp">

                        <Spinner
                            android:id="@+id/duration"
                            android:layout_width="match_parent"
                            android:layout_height="48dp"
                            android:backgroundTint="@color/text_alt"
                            android:popupBackground="@color/background_alt"
                            android:background="@drawable/spinner_background"
                            android:theme="@style/ThemeOverlay.MaterialComponents.Dark" />
                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:background="@color/background_main"
                        android:paddingHorizontal="4dp"
                        android:text="@string/duration"
                        android:textColor="#3399FF"
                        android:textSize="12sp" />
                </FrameLayout>

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="6dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/border"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:padding="4dp">

                        <Spinner
                            android:id="@+id/temperature"
                            android:layout_width="match_parent"
                            android:layout_height="48dp"
                            android:backgroundTint="@color/text_alt"
                            android:popupBackground="@color/background_alt"
                            android:background="@drawable/spinner_background"
                            android:theme="@style/ThemeOverlay.MaterialComponents.Dark" />
                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:background="@color/background_main"
                        android:paddingHorizontal="4dp"
                        android:text="@string/temperature"
                        android:textColor="#3399FF"
                        android:textSize="12sp" />
                </FrameLayout>

            </LinearLayout>

            <LinearLayout
                style="?android:attr/buttonBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btncls"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="14dp"
                    android:layout_marginEnd="30dp"
                    android:text="@string/close"
                    android:textColor="@color/text_inverted"
                    android:textSize="16sp"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/btnstop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="14dp"
                    android:text="@string/stop"
                    android:textColor="@color/text_inverted"
                    android:textSize="16sp"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/btnstart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="14dp"
                    android:layout_marginStart="30dp"
                    android:text="@string/start"
                    android:textColor="@color/text_inverted"
                    android:textSize="16sp"
                    tools:ignore="ButtonStyle" />

            </LinearLayout>

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>